# githubactioncontexthelper

./: .gitignore  pyproject.toml  setup.py
docs/source/: conf.py  index.rst  modules.rst
githubactioncontexthelper/: __init__.py  __version__.py  contexthandler.py  githubactioncontext.py
tests/: __init__.py  conftest.py  test_githubactioncontext.py
